--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 							<li><a href="elements.html">Photos</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://www.facebook.com/themilestonesofficial" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+							<li><a href="https://www.instagram.com/themilestones" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="https://open.spotify.com/artist/50mn9tNKRppRqIwET3aMqf?si=bPlMmnV1RpWCth5KsCFhIQ" target="_blank" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
+							<li><a href="https://www.youtube.com/@themilestonesofficial" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
+
+
 						</ul>
 					</nav>
 
