cleaned up site content, set up band info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/custom.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -45,17 +46,15 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Overview</a></li>
-							<li><a href="generic.html">Music</a></li>
-							<li><a href="elements.html">Shows</a></li>
-							<li><a href="elements.html">Photos</a></li>
+							<li><a href="music.html">Music</a></li>
+							<li><a href="shows.html">Shows</a></li>
+							<li><a href="photos.html">Photos</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.facebook.com/themilestonesofficial" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="https://www.instagram.com/themilestones" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="https://open.spotify.com/artist/50mn9tNKRppRqIwET3aMqf?si=bPlMmnV1RpWCth5KsCFhIQ" target="_blank" class="icon brands fa-spotify"><span class="label">Spotify</span></a></li>
 							<li><a href="https://www.youtube.com/@themilestonesofficial" target="_blank" class="icon brands fa-youtube"><span class="label">YouTube</span></a></li>
-
-
 						</ul>
 					</nav>
 
@@ -71,8 +70,58 @@
 						</div>
 
 
+						<article class="shows post featured">
+							<!-- <header class="major">
+								<span class="date">Upcoming Shows</span>
+							</header> -->
+
+							<h1>Upcoming Shows</h1>
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>2/14 - Thursday</h4>
+									<p></p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>Golden Pony</h4>
+									<p>Harrisonburg VA</p>
+									<h6>w/ Easy Honey</h6>
+								</div>
+							</div>
+
+							<hr class="break">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>2/29 - Thursday</h4>
+									<p></p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>The Camel</h4>
+									<p>Richmond VA</p>
+									<h6>w/ Not A Saint & Black Dog RVA</h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>5/25 - Saturday</h4>
+									<p></p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>Redbeard Brewing Co</h4>
+									<p>Staunton VA</p>
+								</div>
+							</div>
+
+							<img src="images/BB-3.jpg" alt="" class="img-responsive margin-auto mt-5"/>
+
+						</article>
+
 						<!-- Featured Post -->
-							<article class="post featured">
+							<!-- <article class="post featured">
 								<header class="major">
 									<span class="date">Upcoming Shows</span>
 									<h2><a href="#">And this is a<br />
@@ -85,10 +134,10 @@
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
-							</article>
+							</article> -->
 
 						<!-- Posts -->
-							<section class="posts">
+							<!-- <section class="posts">
 								<article>
 									<header>
 										<span class="date">April 24, 2017</span>
@@ -161,22 +210,7 @@
 										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
-							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
+							</section> -->
 
 					</div>
 
@@ -204,26 +238,18 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><small>All Inquiries</small></p>
+								<p><a href="#">themilestonesofficial@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.facebook.com/themilestonesofficial" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/themilestones" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://open.spotify.com/artist/50mn9tNKRppRqIwET3aMqf?si=bPlMmnV1RpWCth5KsCFhIQ" target="_blank" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li>
+									<li><a href="https://www.youtube.com/@themilestonesofficial" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
 								</ul>
 							</section>
 						</section>
@@ -231,7 +257,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; 2024 The Milestones</li><li>Design: Alex Wandres</li></ul>
 					</div>
 
 			</div>
