--- a/shows.html
+++ b/shows.html
@@ -94,7 +94,7 @@
 							<section class="split contact">
 								<section>
 									<h3>Email</h3>
-									<p><small>All Inquiries</small></p>
+									<p><small></small></p>
 									<p><a href="#">themilestonesofficial@gmail.com</a></p>
 								</section>
 								<section>
