layout updates, added content to pages

--- a/photos.html
+++ b/photos.html
@@ -29,7 +29,7 @@
 				<!-- Header -->
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo" style="background-color:white; border:none; max-width:500px;"><img src="images/MilestonesLogo_900px.png" alt="" class="img-responsive margin-auto" style="background-color:white; ">
+						<a href="index.html" class="logo" style="background-color:white; border:none; max-width:500px;"><img src="images/MilestonesLogo_900px.png" alt="The Milestones band live performance photo" class="img-responsive margin-auto" style="background-color:white; ">
 </a>
 					</header>
 
@@ -65,91 +65,65 @@
 								</header> -->
 								<div class="grid-wrapper masonry-grid">
 									<div>
-										<img src="images/BB-1.jpg" alt="" />
+										<img src="images/BB-1.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-3.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB_20-color.jpg" alt="">
+										<img src="images/BB_20-color.jpg" alt="The Milestones band live performance photo">
 									</div>
 									<div class="wide">
-										<img src="images/BB_46-color.jpg" alt="" />
+										<img src="images/BB_46-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-4.jpg" alt="" />
+										<img src="images/BB-4.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB_37-color.jpg" alt="" />
+										<img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="big">
-										<img src="images/BB_36-color.jpg" alt="" />
+										<img src="images/BB_36-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB_7-color.jpg" alt="" />
+										<img src="images/BB_7-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="wide">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB_102-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="big">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB_104-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/TheMilestones-Band-MainBG.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB_7-color" alt="" />
+										<img src="images/BB_7-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-3.jpg" alt="The Milestones band live performance photo" />
+									</div>
+									
+									<div>
+										<img src="images/BB_104-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB_7-color" alt="" />
-									</div>
-									<div>
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div class="wide">
-										<img src="images/BB_7-color" alt="" />
-									</div>
-									<div>
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div>
-										<img src="images/BB_7-color" alt="" />
-									</div>
-									<div class="wide">
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div>
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div class="wide">
-										<img src="images/BB_7-color" alt="" />
+										<img src="images/BB-2.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="big">
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div>
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div>
-										<img src="images/BB-3.jpg" alt="" />
-									</div>
-									<div class="big">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-8.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB_38-color.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-3.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-3.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="wide">
-										<img src="images/BB-3.jpg" alt="" />
+										<img src="images/BB-3.jpg" alt="The Milestones band live performance photo" />
 									</div>
 								</div>
 							</section>
