--- a/music.html
+++ b/music.html
@@ -70,9 +70,13 @@
 
       													<iframe style="border-radius:12px;" src="https://open.spotify.com/embed/artist/50mn9tNKRppRqIwET3aMqf?utm_source=generator&theme=0" width="100%" height="86%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                   </div>
+                  <div class="spacer d-sm-none mt-3">
+                    &nbsp;
+                  </div>
+
                   <div class="col-sm-6" style="min-height:350px;">
                     <h4 class="mb-4">UFO - Live at the Arcadia Project</h4>
-      							<iframe width="100%" height="415" src="https://www.youtube.com/embed/L79XogDGnJc?si=HL20gAneHI5u2sQP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      							<iframe width="100%" height="415" src="https://www.youtube.com/embed/L79XogDGnJc?si=HL20gAneHI5u2sQP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen loading="lazy"></iframe>
                   </div>
                 </div>
 
@@ -81,6 +85,9 @@
                 <div class="row">
                   <div class="col-sm-6">
                     <img src="images/IR4v7.jpeg" alt="The Milestones In Ruins Album" class="img-responsive margin-auto">
+                    <div class="spacer d-sm-none mt-2">
+                      &nbsp;
+                    </div>
                     <h4>In Ruins</h4>
                     <p>Debut Album</p>
                   </div>
@@ -89,9 +96,16 @@
                   </div>
                 </div>
 
+                <div class="spacer d-sm-none mt-3">
+                  &nbsp;
+                </div>
+
                 <div class="row pt-5">
                   <div class="col-sm-6">
                     <img src="images/TheMilestones-Band-MainBG.jpg" alt="The Milestones Live at the Arcadia Project Album" class="img-responsive margin-auto">
+                    <div class="spacer d-sm-none mt-2">
+                      &nbsp;
+                    </div>
                     <h4>The Arcadia Project</h4>
                     <p>Live Album</p>
                   </div>
