added head to all pages

--- a/photos.html
+++ b/photos.html
@@ -6,7 +6,26 @@
 -->
 <html>
 <head>
-	<title>The Milestones</title>
+	<!-- HTML Meta Tags -->
+<title>The Milestones - Photos</title>
+<meta name="description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="themilestones.band">
+<meta property="og:type" content="website">
+<meta property="og:title" content="The Milestones">
+<meta property="og:description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
+<meta property="og:image" content="https://www.themilestones.band/images/og-image-band.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="themilestones.band">
+<meta name="twitter:title" content="The Milestones">
+<meta name="twitter:description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
+<meta name="twitter:image" content="https://www.themilestones.band/images/og-image-band.jpg">
+
+<!-- Meta Tags Generated via https://iplocation.io -->
+
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
