added JPG file name

--- a/photos.html
+++ b/photos.html
@@ -87,13 +87,13 @@
 										<img src="images/BB-1.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-Color/1.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/1.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB-Color/42.jpg" alt="The Milestones band live performance photo">
+										<img src="images/BB-Color/42.JPG" alt="The Milestones band live performance photo">
 									</div>
 									<div class="wide">
-										<img src="images/BB-Color/58.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/58.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
 										<img src="images/Arcadia/14.jpg" alt="The Milestones band live performance photo" />
@@ -111,20 +111,20 @@
 										<img src="images/Arcadia/45.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="big">
-										<img src="images/BB-Color/74.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/74.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
 										<img src="images/Arcadia/1.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-Color/9.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/9.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-Color/102.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/102.JPG" alt="The Milestones band live performance photo" />
 									</div>
 
 									<div>
-										<img src="images/BB-Color/77.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/77.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
 										<img src="images/BB-2.jpg" alt="The Milestones band live performance photo" />
@@ -133,13 +133,13 @@
 										<img src="images/Arcadia/28.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="tall">
-										<img src="images/BB-Color/69.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/69.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-Color/110.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/110.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-Color/92.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-Color/92.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="wide">
 										<img src="images/Arcadia/37.jpg" alt="The Milestones band live performance photo" />
@@ -231,7 +231,7 @@
 			  $('body').on('keyup.modal-close', function(e) {
 
 			      removeModal();
-			  
+
 			  });
 			});
 </script>
