--- a/photos.html
+++ b/photos.html
@@ -105,7 +105,7 @@
 										<img src="images/Arcadia/17.jpg" alt="The Milestones band live performance photo" />
 									</div>
 									<div>
-										<img src="images/BB-BW/5.jpg" alt="The Milestones band live performance photo" />
+										<img src="images/BB-BW/5.JPG" alt="The Milestones band live performance photo" />
 									</div>
 									<div class="wide">
 										<img src="images/Arcadia/45.jpg" alt="The Milestones band live performance photo" />
