trying to make a commit htat triggers vercel build

--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@
 								</ul>
 							</section>
 						</section>
-					</footer> 
+					</footer>
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; 2024 The Milestones</li><li>Design: Alex Wandres</li></ul>
+						<ul><li>&copy; 2024 The Milestones</li><li>Design by Alex Wandres</li></ul>
 					</div>
 
 			</div>
