set epk page mobile friendly

--- a/epk.html
+++ b/epk.html
@@ -42,7 +42,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	</head>
-	<body class="is-preload">
+	<body class="is-preload epk">
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="fade-in">
@@ -85,11 +85,16 @@
 						<div class="col-sm-6">
 													<iframe style="border-radius:12px; min-height:400px;" src="https://open.spotify.com/embed/artist/50mn9tNKRppRqIwET3aMqf?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 						</div>
-						<div class="col-sm-6 d-none d-sm-flex">
+            <div class="d-sm-none my-3">
+              &nbsp
+            </div>
+						<div class="col-sm-6">
                                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3rTtzKVFXBE?si=8k4T8nSmKChlvmG3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div>
 						</div>
-
+            <div class="d-sm-none mb-3">
+              &nbsp
+            </div>
 
 						<article class="shows post featured bio">
 							<!-- <header class="major">
@@ -111,6 +116,9 @@
     <img src="images/Arcadia/Band - Steps Standing (1).jpg" alt="" class="img-responsive margin-auto"/>
     <!-- <img src="images/MilestonesLogo_900px.png" alt="" class="img-responsive margin-auto py-4"> -->
   </div>
+  <div class="d-sm-none my-1">
+    &nbsp
+  </div>
   <div class="col-sm-7" style="text-align:left;">
     <p>The Milestones are a 4-piece rock & roll band, based out of the Shenandoah Valley, Virginia, with roots in the MD/DC/Baltimore music scene.</p>
 
@@ -123,28 +131,64 @@
 
 <!-- <p>The Milestones have shared the stage with the following national/regional acts:<br><b>Mo Lowda & The Humble, Badflower, Tigercub, The Sheepdogs, Seratones, The Cold Seas, Parlor Mobb, Moving Units,  </b></p> -->
 
-<p><b>The Milestones have shared the stage with the following national/regional acts:</b></p>
+
+<div class="d-sm-none" style="text-align:center;">
+  <p><b>The Milestones have shared the stage with the following national/regional acts:</b></p>
 
 
-<div class="row">
-  <div class="col-sm-5 offset-sm-2">
-    <p>
-Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
-    </p>
-  </div>
+  <div class="row">
+    <div class="col-sm-5 offset-sm-2">
+      <p>
+  Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
+      </p>
+    </div>
 
-  <div class="col-sm-5">
-    <p>
-Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
-    </p>
+    <div class="col-sm-5">
+      <p>
+  Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
+      </p>
+    </div>
   </div>
 </div>
+
+
+
+<div class="d-none d-sm-block">
+  <p><b>The Milestones have shared the stage with the following national/regional acts:</b></p>
+
+
+  <div class="row">
+    <div class="col-sm-5 offset-sm-2">
+      <p>
+  Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
+      </p>
+    </div>
+
+    <div class="col-sm-5">
+      <p>
+  Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
+      </p>
+    </div>
   </div>
 </div>
 
-<div class="grid-wrapper masonry-grid mt-5 mb-3">
+
+  </div>
+</div>
+
+<div class="grid-wrapper masonry-grid mt-5 mb-3 d-sm-none">
+
   <div>
-    <img src="images/BB-1.jpg" alt="The Milestones band live performance photo" />
+    <img src="images/BB-Color/110.JPG" alt="The Milestones band live performance photo" />
+  </div>
+  <div class="tall">
+    <img src="images/BB-Color/42.JPG" alt="The Milestones band live performance photo">
+  </div>
+</div>
+
+<div class="grid-wrapper masonry-grid mt-5 mb-3 d-none d-sm-grid">
+  <div>
+    <img src="images/BB-1.jpg" alt="The Milestones band live performance photo"/>
   </div>
   <div>
     <img src="images/BB-Color/110.JPG" alt="The Milestones band live performance photo" />
@@ -153,16 +197,15 @@ Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
     <img src="images/BB-Color/42.JPG" alt="The Milestones band live performance photo">
   </div>
   <div class="wide">
-    <img src="images/BB-Color/58.JPG" alt="The Milestones band live performance photo" />
+    <img src="images/BB-Color/58.JPG" alt="The Milestones band live performance photo"/>
   </div>
   <div>
-    <img src="images/Arcadia/14.jpg" alt="The Milestones band live performance photo" />
+    <img src="images/Arcadia/14.jpg" alt="The Milestones band live performance photo"/>
   </div>
   <div class="">
-    <img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo" />
+    <img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo"/>
   </div>
 </div>
-
 
 <div class="row pt-5 venues text-center">
   <h2 class="mb-5">Venues We've Played</h2>
@@ -214,7 +257,7 @@ Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
   </div>
 
 
-  <div class="grid-wrapper masonry-grid mt-5">
+  <div class="grid-wrapper masonry-grid mt-5 d-none d-sm-grid">
     <div class="tall">
       <img src="images/Arcadia/37.jpg" alt="The Milestones band live performance photo">
     </div>
@@ -222,18 +265,27 @@ Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
       <img src="images/Arcadia/1.jpg" alt="The Milestones band live performance photo" />
     </div>
     <div>
-      <img src="images/BB-Color/9.JPG" alt="The Milestones band live performance photo" />
+      <img src="images/BB-Color/9.JPG" alt="The Milestones band live performance photo"/>
     </div>
 
 
     <div>
-      <img src="images/BB-BW/5.jpg" alt="The Milestones band live performance photo" />
+      <img src="images/BB-BW/5.jpg" alt="The Milestones band live performance photo"/>
     </div>
     <div class="">
-      <img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo" />
+      <img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo"/>
     </div>
     <div class="wide">
-      <img src="images/BB_59-color.jpg" alt="The Milestones band live performance photo" />
+      <img src="images/BB_59-color.jpg" alt="The Milestones band live performance photo"/>
+    </div>
+  </div>
+
+  <div class="grid-wrapper masonry-grid mt-5 d-sm-none">
+    <div class="tall">
+      <img src="images/Arcadia/37.jpg" alt="The Milestones band live performance photo">
+    </div>
+    <div>
+      <img src="images/Arcadia/1.jpg" alt="The Milestones band live performance photo" />
     </div>
   </div>
 
