updated meta tag

--- a/epk.html
+++ b/epk.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
 		<!-- HTML Meta Tags -->
-<title>The Milestones</title>
+<title>The Milestones - EPK</title>
 <meta name="description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
 
 <!-- Facebook Meta Tags -->
