updated baltimore venues

--- a/epk.html
+++ b/epk.html
@@ -221,10 +221,10 @@
     <h5 class="mb-3"><b>Baltimore</b></h5>
     <p>Baltimore Soundstage<br>
       Metro Gallery<br>
+      The 8x10<br>
       Ottobar<br>
       Artscape (event)<br>
-      JHU Spring Fair (event)<br>
-      Fed Hill Block Party (event)
+      JHU Spring Fair (event)
     </p>
   </div>
   <div class="col-sm-4">
