fixed image src

--- a/epk.html
+++ b/epk.html
@@ -270,7 +270,7 @@
 
 
     <div>
-      <img src="images/BB-BW/5.jpg" alt="The Milestones band live performance photo"/>
+      <img src="images/BB-BW/5.JPG" alt="The Milestones band live performance photo"/>
     </div>
     <div class="">
       <img src="images/BB_37-color.jpg" alt="The Milestones band live performance photo"/>
