--- a/epk.html
+++ b/epk.html
@@ -85,16 +85,17 @@
 						<div class="col-sm-6">
 													<iframe style="border-radius:12px; min-height:400px;" src="https://open.spotify.com/embed/artist/50mn9tNKRppRqIwET3aMqf?utm_source=generator&theme=0" width="100%" height="100%" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 						</div>
-            <div class="d-sm-none my-3">
+            <div class="d-md-none my-3">
               &nbsp
             </div>
 						<div class="col-sm-6">
                                   <iframe width="100%" height="100%" src="https://www.youtube.com/embed/3rTtzKVFXBE?si=8k4T8nSmKChlvmG3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 						</div>
-						</div>
-            <div class="d-sm-none mb-3">
+            <div class="d-md-none mb-3">
               &nbsp
             </div>
+						</div>
+
 
 						<article class="shows post featured bio">
 							<!-- <header class="major">
@@ -112,14 +113,14 @@
 
 
 <div class="row">
-  <div class="col-sm-5">
+  <div class="col-md-5">
     <img src="images/Arcadia/Band - Steps Standing (1).jpg" alt="" class="img-responsive margin-auto"/>
     <!-- <img src="images/MilestonesLogo_900px.png" alt="" class="img-responsive margin-auto py-4"> -->
   </div>
-  <div class="d-sm-none my-1">
+  <div class="d-md-none my-1">
     &nbsp
   </div>
-  <div class="col-sm-7" style="text-align:left;">
+  <div class="col-md-7" style="text-align:left;">
     <p>The Milestones are a 4-piece rock & roll band, based out of the Shenandoah Valley, Virginia, with roots in the MD/DC/Baltimore music scene.</p>
 
     <p>In support of their debut album ‘In Ruins’, released May 2023, they toured extensively throughout the Richmond/Harrisonburg/Charlottesville area, with a few forays back into their home state of Maryland. During this time they significantly grew their audience based on their engaging live performances, expanded their digital reach, and shot a live performance video series at an old theater in downtown Staunton. </p>
@@ -132,7 +133,7 @@
 <!-- <p>The Milestones have shared the stage with the following national/regional acts:<br><b>Mo Lowda & The Humble, Badflower, Tigercub, The Sheepdogs, Seratones, The Cold Seas, Parlor Mobb, Moving Units,  </b></p> -->
 
 
-<div class="d-sm-none" style="text-align:center;">
+<div class="d-md-none" style="text-align:center;">
   <p><b>The Milestones have shared the stage with the following national/regional acts:</b></p>
 
 
@@ -153,7 +154,7 @@
 
 
 
-<div class="d-none d-sm-block">
+<div class="d-none d-md-block">
   <p><b>The Milestones have shared the stage with the following national/regional acts:</b></p>
 
 
@@ -176,7 +177,7 @@
   </div>
 </div>
 
-<div class="grid-wrapper masonry-grid mt-5 mb-3 d-sm-none">
+<div class="grid-wrapper masonry-grid mt-5 mb-3 d-md-none">
 
   <div>
     <img src="images/BB-Color/110.JPG" alt="The Milestones band live performance photo" />
@@ -186,7 +187,7 @@
   </div>
 </div>
 
-<div class="grid-wrapper masonry-grid mt-5 mb-3 d-none d-sm-grid">
+<div class="grid-wrapper masonry-grid mt-5 mb-3 d-none d-md-grid">
   <div>
     <img src="images/BB-1.jpg" alt="The Milestones band live performance photo"/>
   </div>
@@ -257,7 +258,7 @@
   </div>
 
 
-  <div class="grid-wrapper masonry-grid mt-5 d-none d-sm-grid">
+  <div class="grid-wrapper masonry-grid mt-5 d-none d-md-grid">
     <div class="tall">
       <img src="images/Arcadia/37.jpg" alt="The Milestones band live performance photo">
     </div>
@@ -280,7 +281,7 @@
     </div>
   </div>
 
-  <div class="grid-wrapper masonry-grid mt-5 d-sm-none">
+  <div class="grid-wrapper masonry-grid mt-5 d-md-none">
     <div class="tall">
       <img src="images/Arcadia/37.jpg" alt="The Milestones band live performance photo">
     </div>
