--- a/epk.html
+++ b/epk.html
@@ -138,13 +138,13 @@
 
 
   <div class="row">
-    <div class="col-sm-5 offset-sm-2">
+    <div class="col-md-5 offset-sm-2">
       <p>
   Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
       </p>
     </div>
 
-    <div class="col-sm-5">
+    <div class="col-md-5">
       <p>
   Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
       </p>
@@ -159,13 +159,13 @@
 
 
   <div class="row">
-    <div class="col-sm-5 offset-sm-2">
+    <div class="col-md-5 offset-md-2">
       <p>
   Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
       </p>
     </div>
 
-    <div class="col-sm-5">
+    <div class="col-md-5">
       <p>
   Seratones<br> The Cold Seas<br> Parlor Mobb<br> Moving Units
       </p>
