--- a/epk.html
+++ b/epk.html
@@ -138,7 +138,7 @@
 
 
   <div class="row">
-    <div class="col-md-5 offset-sm-2">
+    <div class="col-md-5 offset-md-2">
       <p>
   Badflower<br> Tigercub<br> The Sheepdogs<br> Mo Lowda & The Humble<br> The Ataris
       </p>
