--- a/epk.html
+++ b/epk.html
@@ -123,7 +123,7 @@
   <div class="col-md-7" style="text-align:left;">
     <p>The Milestones are a 4-piece rock & roll band, based out of the Shenandoah Valley, Virginia, with roots in the MD/DC/Baltimore music scene.</p>
 
-    <p>In support of their debut album ‘In Ruins’, released May 2023, they toured extensively throughout the Richmond/Harrisonburg/Charlottesville area, with a few forays back into their home state of Maryland. During this time they significantly grew their audience based on their engaging live performances, expanded their digital reach, and shot a live performance video series at an old theater in downtown Staunton. </p>
+    <p>In support of their debut album ‘In Ruins’, released May 2023, they toured extensively throughout the Richmond/Harrisonburg/Charlottesville area, with a couple forays back into their home state of Maryland. During this time they significantly grew their audience based on their engaging live performances, expanded their digital reach, and shot a live performance video series at an old theater in downtown Staunton. </p>
 
     <p>The year ended with a few notable highlights, including nearly 450 tickets sold for a show at The Broadberry (Richmond, VA) opening for Mo Lowda & The Humble, packing the house at Pro Re Nata Brewery (Crozet, Virginia), and a nearly sold out NYE bash at The Tempest in Staunton, Virginia.</p>
 
