--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 -->
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8NWD1VP16E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8NWD1VP16E');
+</script>
+
 		<!-- HTML Meta Tags -->
 <title>The Milestones</title>
 <meta name="description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
