--- a/photos.html
+++ b/photos.html
@@ -6,6 +6,15 @@
 -->
 <html>
 <head>
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8NWD1VP16E"></script>
+<script>
+window.dataLayer = window.dataLayer || [];
+function gtag(){dataLayer.push(arguments);}
+gtag('js', new Date());
+
+gtag('config', 'G-8NWD1VP16E');
+</script>
 	<!-- HTML Meta Tags -->
 <title>The Milestones - Photos</title>
 <meta name="description" content="The Milestones are a 4 piece rock band in the VA/DC/MD area. Debut album In Ruins - out now!">
@@ -150,45 +159,96 @@
 					</div>
 
 					<!-- Footer -->
-						<footer id="footer">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="3"></textarea>
-										</div>
+					<footer id="footer">
+						<section>
+							<form method="post" action="#" id="form">
+
+								<input type="hidden" name="access_key" value="46138fc0-c2b7-46d3-aae6-0f67987ea898">
+
+
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" /></li>
-									</ul>
-								</form>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" required/>
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+								<div class="" id="result">
+
+								</div>
+							</form>
+
+							<script>
+							const form = document.getElementById('form');
+							const result = document.getElementById('result');
+
+							form.addEventListener('submit', function(e) {
+							    const formData = new FormData(form);
+							    e.preventDefault();
+
+							    const object = Object.fromEntries(formData);
+							    const json = JSON.stringify(object);
+
+							    result.innerHTML = "Please wait..."
+
+							    fetch('https://api.web3forms.com/submit', {
+							            method: 'POST',
+							            headers: {
+							                'Content-Type': 'application/json',
+							                'Accept': 'application/json'
+							            },
+							            body: json
+							        })
+							        .then(async (response) => {
+							            let json = await response.json();
+							            if (response.status == 200) {
+							                result.innerHTML = json.message;
+							            } else {
+							                console.log(response);
+							                result.innerHTML = json.message;
+							            }
+							        })
+							        .catch(error => {
+							            console.log(error);
+							            result.innerHTML = "Something went wrong!";
+							        })
+							        .then(function() {
+							            form.reset();
+							            setTimeout(() => {
+							                result.style.display = "none";
+							            }, 3000);
+							        });
+							});
+							</script>
+
+						</section>
+						<section class="split contact">
+							<section>
+								<h3>Email</h3>
+								<p><small></small></p>
+								<p><a href="#">themilestonesofficial@gmail.com</a></p>
 							</section>
-							<section class="split contact">
-								<section>
-									<h3>Email</h3>
-									<p><small></small></p>
-									<p><a href="#">themilestonesofficial@gmail.com</a></p>
-								</section>
-								<section>
-									<h3>Social</h3>
-									<ul class="icons alt">
-										<li><a href="https://www.facebook.com/themilestonesofficial" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="https://www.instagram.com/themilestones" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="https://open.spotify.com/artist/50mn9tNKRppRqIwET3aMqf?si=bPlMmnV1RpWCth5KsCFhIQ" target="_blank" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li>
-										<li><a href="https://www.youtube.com/@themilestonesofficial" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
-									</ul>
-								</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<li><a href="https://www.facebook.com/themilestonesofficial" target="_blank" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+									<li><a href="https://www.instagram.com/themilestones" target="_blank" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://open.spotify.com/artist/50mn9tNKRppRqIwET3aMqf?si=bPlMmnV1RpWCth5KsCFhIQ" target="_blank" class="icon brands alt fa-spotify"><span class="label">Spotify</span></a></li>
+									<li><a href="https://www.youtube.com/@themilestonesofficial" target="_blank" class="icon brands alt fa-youtube"><span class="label">YouTube</span></a></li>
+								</ul>
 							</section>
-						</footer>
+						</section>
+					</footer>
 
 						<!-- Copyright -->
 							<div id="copyright">
