--- a/shows.html
+++ b/shows.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 <head>
   <!-- Google tag (gtag.js) -->
@@ -55,7 +51,6 @@ gtag('config', 'G-8NWD1VP16E');
 			<div id="wrapper">
 
 				<!-- Header -->
-				<!-- Header -->
 					<header id="header">
 						<a href="index.html" class="logo" style="background-color:white; border:none; max-width:500px;"><img src="images/MilestonesLogo_900px.png" alt="" class="img-responsive margin-auto" style="background-color:white; ">
 </a>
@@ -85,21 +80,18 @@ gtag('config', 'G-8NWD1VP16E');
                 <h1 class="pb-3">Shows</h1>
 
                 <article class="shows post featured">
-    							<!-- <header class="major">
-    								<span class="date">Upcoming Shows</span>
-    							</header> -->
+
 
     							<h1>Upcoming</h1>
 
     							<div class="row">
     								<div class="col-sm-5">
-    									<h4>2/15 - Thursday</h4>
+    									<h4>4/27 - Saturday</h4>
     									<p></p>
     								</div>
     								<div class="col-sm-7 text-right">
-    									<h4>Golden Pony</h4>
-    									<p>Harrisonburg VA</p>
-    									<h6>w/ Easy Honey</h6>
+    									<h4>Clayhouse Live (festival)</h4>
+    									<p>Richmond VA</p>
     								</div>
     							</div>
 
@@ -107,15 +99,28 @@ gtag('config', 'G-8NWD1VP16E');
 
     							<div class="row">
     								<div class="col-sm-5">
-    									<h4>2/29 - Thursday</h4>
+    									<h4>5/5 - Sunday</h4>
     									<p></p>
     								</div>
     								<div class="col-sm-7 text-right">
-    									<h4>The Camel</h4>
-    									<p>Richmond VA</p>
-    									<h6>w/ Not A Saint & Black Dog RVA</h6>
+    									<h4>Baja Bean</h4>
+    									<p>Staunton VA</p>
+    									<h6>w/ Babe Lewis</h6>
     								</div>
     							</div>
+
+                  <hr class="break pad-vert-3x">
+
+                  <div class="row">
+                    <div class="col-sm-5">
+                      <h4>5/11 - Saturday</h4>
+                      <p></p>
+                    </div>
+                    <div class="col-sm-7 text-right">
+                      <h4>MD Craft Beer Festival</h4>
+                      <p>Frederick MD</p>
+                    </div>
+                  </div>
 
     							<hr class="break pad-vert-3x">
 
