--- a/index.html
+++ b/index.html
@@ -103,13 +103,12 @@
 
 							<div class="row">
 								<div class="col-sm-5">
-									<h4>2/15 - Thursday</h4>
+									<h4>4/27 - Saturday</h4>
 									<p></p>
 								</div>
 								<div class="col-sm-7 text-right">
-									<h4>Golden Pony</h4>
-									<p>Harrisonburg VA</p>
-									<h6>w/ Easy Honey</h6>
+									<h4>Clayhouse Live (festival)</h4>
+									<p>Richmond VA</p>
 								</div>
 							</div>
 
@@ -117,13 +116,26 @@
 
 							<div class="row">
 								<div class="col-sm-5">
-									<h4>2/29 - Thursday</h4>
+									<h4>5/5 - Sunday</h4>
 									<p></p>
 								</div>
 								<div class="col-sm-7 text-right">
-									<h4>The Camel</h4>
-									<p>Richmond VA</p>
-									<h6>w/ Not A Saint & Black Dog RVA</h6>
+									<h4>Baja Bean</h4>
+									<p>Staunton VA</p>
+									<h6>w/ Babe Lewis</h6>
+								</div>
+							</div>
+
+							<hr class="break pad-vert-3x">
+
+							<div class="row">
+								<div class="col-sm-5">
+									<h4>5/11 - Saturday</h4>
+									<p></p>
+								</div>
+								<div class="col-sm-7 text-right">
+									<h4>MD Craft Beer Festival</h4>
+									<p>Frederick MD</p>
 								</div>
 							</div>
 
@@ -139,6 +151,7 @@
 									<p>Staunton VA</p>
 								</div>
 							</div>
+
 
 							<img src="images/BB_20-color.jpg" alt="" class="img-responsive margin-auto mt-5"/>
 
