--- a/index.html
+++ b/index.html
@@ -99,18 +99,8 @@
 								<span class="date">Upcoming Shows</span>
 							</header> -->
 
-							<h1>Upcoming Shows</h1>
+							<h1>Upcoming</h1>
 
-							<div class="row">
-								<div class="col-sm-5">
-									<h4>4/27 - Saturday</h4>
-									<p></p>
-								</div>
-								<div class="col-sm-7 text-right">
-									<h4>Clayhouse Live (festival)</h4>
-									<p>Richmond VA</p>
-								</div>
-							</div>
 
 							<hr class="break">
 
