--- a/shows.html
+++ b/shows.html
@@ -87,13 +87,15 @@ gtag('config', 'G-8NWD1VP16E');
 
     							<div class="row">
     								<div class="col-sm-5">
-    									<h4>5/5 - Sunday</h4>
+    									<h4>6/29 - Saturday</h4>
     									<p></p>
     								</div>
     								<div class="col-sm-7 text-right">
-    									<h4>Baja Bean</h4>
+    									<h4>Ciders From Mars</h4>
     									<p>Staunton VA</p>
-    									<h6>w/ Babe Lewis</h6>
+    									<h6>w/ Valentin Prince</h6>
+                      <h6>& 14Lbs</h6>
+
     								</div>
     							</div>
 
@@ -101,27 +103,48 @@ gtag('config', 'G-8NWD1VP16E');
 
                   <div class="row">
                     <div class="col-sm-5">
-                      <h4>5/11 - Saturday</h4>
+                      <h4>6/30 - Sunday</h4>
                       <p></p>
                     </div>
                     <div class="col-sm-7 text-right">
-                      <h4>MD Craft Beer Festival</h4>
-                      <p>Frederick MD</p>
+                      <h4>Banditos Lounge</h4>
+                      <p>Richmond VA</p>
+                      <h6>w/ Valentin Prince</h6>
+                      <h6>Tulavera, Turning Jade</h6>
+
                     </div>
                   </div>
 
     							<hr class="break pad-vert-3x">
 
-    							<div class="row">
-    								<div class="col-sm-5">
-    									<h4>5/25 - Saturday</h4>
-    									<p></p>
-    								</div>
-    								<div class="col-sm-7 text-right">
-    									<h4>Redbeard Brewing Co</h4>
-    									<p>Staunton VA</p>
-    								</div>
-    							</div>
+                  <div class="row">
+                    <div class="col-sm-5">
+                      <h4>7/1 - Monday</h4>
+                      <p></p>
+                    </div>
+                    <div class="col-sm-7 text-right">
+                      <h4>Duck Ranch</h4>
+                      <p>Durham NC</p>
+                      <h6>w/ Valentin Prince</h6>
+
+                    </div>
+                  </div>
+
+                  <hr class="break pad-vert-3x">
+
+                  <div class="row">
+                    <div class="col-sm-5">
+                      <h4>7/2 - Tuesday</h4>
+                      <p></p>
+                    </div>
+                    <div class="col-sm-7 text-right">
+                      <h4>The Pour House</h4>
+                      <p>Raleigh NC</p>
+                      <h6>w/ Valentin Prince</h6>
+                      <h6>Sweet Dream</h6>
+                      <h6>Astrocat</h6>
+                    </div>
+                  </div>
 
     							<img src="images/BB_104-color.jpg" alt="" class="img-responsive margin-auto mt-5"/>
 
