--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 									<h4>Banditos Lounge</h4>
 									<p>Richmond VA</p>
 									<h6>w/ Valentin Prince</h6>
-									<h6>Tulavera, Turning Jade</h6>
+									<h6>Tulavera</h6>
+									<h6>Turning Jade</h6>
 
 								</div>
 							</div>
