--- a/shows.html
+++ b/shows.html
@@ -110,7 +110,8 @@ gtag('config', 'G-8NWD1VP16E');
                       <h4>Banditos Lounge</h4>
                       <p>Richmond VA</p>
                       <h6>w/ Valentin Prince</h6>
-                      <h6>Tulavera, Turning Jade</h6>
+                      <h6>Tulavera</h6>
+                      <h6>Turning Jade</h6>
 
                     </div>
                   </div>
