--- a/index.html
+++ b/index.html
@@ -101,8 +101,9 @@
 
 							<h1>Upcoming</h1>
 
+							<h4>* No upcoming shows *</h4>
 
-							<div class="row">
+							<!-- <div class="row">
 								<div class="col-sm-5">
 									<h4>6/29 - Saturday</h4>
 									<p></p>
@@ -116,53 +117,7 @@
 								</div>
 							</div>
 
-							<hr class="break pad-vert-3x">
-
-							<div class="row">
-								<div class="col-sm-5">
-									<h4>6/30 - Sunday</h4>
-									<p></p>
-								</div>
-								<div class="col-sm-7 text-right">
-									<h4>Banditos Lounge</h4>
-									<p>Richmond VA</p>
-									<h6>w/ Valentin Prince</h6>
-									<h6>Tulavera</h6>
-									<h6>Turning Jade</h6>
-
-								</div>
-							</div>
-
-							<hr class="break pad-vert-3x">
-
-							<div class="row">
-								<div class="col-sm-5">
-									<h4>7/1 - Monday</h4>
-									<p></p>
-								</div>
-								<div class="col-sm-7 text-right">
-									<h4>Duck Ranch</h4>
-									<p>Durham NC</p>
-									<h6>w/ Valentin Prince</h6>
-
-								</div>
-							</div>
-
-							<hr class="break pad-vert-3x">
-
-							<div class="row">
-								<div class="col-sm-5">
-									<h4>7/2 - Tuesday</h4>
-									<p></p>
-								</div>
-								<div class="col-sm-7 text-right">
-									<h4>The Pour House</h4>
-									<p>Raleigh NC</p>
-									<h6>w/ Valentin Prince</h6>
-									<h6>Sweet Dream</h6>
-									<h6>Astrocat</h6>
-								</div>
-							</div>
+							<hr class="break pad-vert-3x"> -->
 
 
 							<img src="images/BB_20-color.jpg" alt="" class="img-responsive margin-auto mt-5"/>
