--- a/shows.html
+++ b/shows.html
@@ -82,10 +82,10 @@ gtag('config', 'G-8NWD1VP16E');
                 <article class="shows post featured">
 
 
-    							<h1>Upcoming</h1>
+    							<h1>No Upcoming Shows</h1>
 
 
-    							<div class="row">
+    							<!-- <div class="row">
     								<div class="col-sm-5">
     									<h4>6/29 - Saturday</h4>
     									<p></p>
@@ -99,53 +99,9 @@ gtag('config', 'G-8NWD1VP16E');
     								</div>
     							</div>
 
-                  <hr class="break pad-vert-3x">
+                  <hr class="break pad-vert-3x"> -->
 
-                  <div class="row">
-                    <div class="col-sm-5">
-                      <h4>6/30 - Sunday</h4>
-                      <p></p>
-                    </div>
-                    <div class="col-sm-7 text-right">
-                      <h4>Banditos Lounge</h4>
-                      <p>Richmond VA</p>
-                      <h6>w/ Valentin Prince</h6>
-                      <h6>Tulavera</h6>
-                      <h6>Turning Jade</h6>
 
-                    </div>
-                  </div>
-
-    							<hr class="break pad-vert-3x">
-
-                  <div class="row">
-                    <div class="col-sm-5">
-                      <h4>7/1 - Monday</h4>
-                      <p></p>
-                    </div>
-                    <div class="col-sm-7 text-right">
-                      <h4>Duck Ranch</h4>
-                      <p>Durham NC</p>
-                      <h6>w/ Valentin Prince</h6>
-
-                    </div>
-                  </div>
-
-                  <hr class="break pad-vert-3x">
-
-                  <div class="row">
-                    <div class="col-sm-5">
-                      <h4>7/2 - Tuesday</h4>
-                      <p></p>
-                    </div>
-                    <div class="col-sm-7 text-right">
-                      <h4>The Pour House</h4>
-                      <p>Raleigh NC</p>
-                      <h6>w/ Valentin Prince</h6>
-                      <h6>Sweet Dream</h6>
-                      <h6>Astrocat</h6>
-                    </div>
-                  </div>
 
     							<img src="images/BB_104-color.jpg" alt="" class="img-responsive margin-auto mt-5"/>
 
